[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libunpacker"
version = "0.1.0"
authors = [
    { name="Msmastr74", email="zontaniguitars@gmail.com" }
]
description = "A multi-format archive unpacking utility supporting deep recursion."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rarfile",
]

[tool.setuptools]
packages = ["libunpacker"]

